test_regress/t/t_covergroup_cross_opt_unsup.out
%Warning-COVERIGN: t/t_covergroup_cross_opt_unsup.v:12:10: Ignoring unsupported coverage cross option: 'per_instance'
   12 |          option.per_instance = 1;   
      |          ^~~~~~
                   ... For warning description see https://verilator.org/warn/COVERIGN?v=latest
                   ... Use "/* verilator lint_off COVERIGN */" and lint_on around source to disable this message.
%Error: Exiting due to
